// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots tree JSON tree 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-417 MuiGrid-spacing-xs-16-440"
    >
      <div
        className="MuiGrid-item-418 MuiGrid-grid-xs-12-457 MuiGrid-grid-md-12-485 tree-wrapper Tree-root-415"
      >
        <div
          className="MuiList-root-514"
        >
          <li
            className="MuiListItem-container-519"
          >
            <div
              className="MuiButtonBase-root-530 MuiListItem-root-518 MuiListItem-default-521 MuiListItem-gutters-526 MuiListItem-button-527 MuiListItem-secondaryAction-528"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-533"
              >
                <pre
                  className="Component-root-534 Component-string-535"
                >
                   String 
                </pre>
              </div>
              <span
                className="MuiButtonBase-root-530 MuiIconButton-root-556 MuiPrivateSwitchBase-root-552 MuiCheckbox-root-546 MuiCheckbox-colorSecondary-551"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-561"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-562"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiPrivateSwitchBase-input-555"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-571"
              >
                <span
                  className="MuiTypography-root-577 MuiTypography-body1-586 MuiListItemText-primary-574"
                >
                  <b>
                    name
                  </b>
                  : 
                   "
                  <pre
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    @latticejs/tree
                  </pre>
                  "
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-618"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-613"
            />
          </li>
          <li
            className="MuiListItem-container-519"
          >
            <div
              className="MuiButtonBase-root-530 MuiListItem-root-518 MuiListItem-default-521 MuiListItem-gutters-526 MuiListItem-button-527 MuiListItem-secondaryAction-528"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-533"
              >
                <pre
                  className="Component-root-534 Component-string-535"
                >
                   String 
                </pre>
              </div>
              <span
                className="MuiButtonBase-root-530 MuiIconButton-root-556 MuiPrivateSwitchBase-root-552 MuiCheckbox-root-546 MuiCheckbox-colorSecondary-551"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-561"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-562"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiPrivateSwitchBase-input-555"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-571"
              >
                <span
                  className="MuiTypography-root-577 MuiTypography-body1-586 MuiListItemText-primary-574"
                >
                  <b>
                    version
                  </b>
                  : 
                   "
                  <pre
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    1.0.1-alpha.10
                  </pre>
                  "
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-618"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-613"
            />
          </li>
          <li
            className="MuiListItem-container-519"
          >
            <div
              className="MuiButtonBase-root-530 MuiListItem-root-518 MuiListItem-default-521 MuiListItem-gutters-526 MuiListItem-button-527 MuiListItem-secondaryAction-528"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-533"
              >
                <pre
                  className="Component-root-534 Component-string-535"
                >
                   String 
                </pre>
              </div>
              <span
                className="MuiButtonBase-root-530 MuiIconButton-root-556 MuiPrivateSwitchBase-root-552 MuiCheckbox-root-546 MuiCheckbox-colorSecondary-551"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-561"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-562"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiPrivateSwitchBase-input-555"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-571"
              >
                <span
                  className="MuiTypography-root-577 MuiTypography-body1-586 MuiListItemText-primary-574"
                >
                  <b>
                    license
                  </b>
                  : 
                   "
                  <pre
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    MIT
                  </pre>
                  "
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-618"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-613"
            />
          </li>
          <li
            className="MuiListItem-container-519"
          >
            <div
              className="MuiButtonBase-root-530 MuiListItem-root-518 MuiListItem-default-521 MuiListItem-gutters-526 MuiListItem-button-527 MuiListItem-secondaryAction-528"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-533"
              >
                <pre
                  className="Component-root-534 Component-string-535"
                >
                   String 
                </pre>
              </div>
              <span
                className="MuiButtonBase-root-530 MuiIconButton-root-556 MuiPrivateSwitchBase-root-552 MuiCheckbox-root-546 MuiCheckbox-colorSecondary-551"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-561"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-562"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiPrivateSwitchBase-input-555"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-571"
              >
                <span
                  className="MuiTypography-root-577 MuiTypography-body1-586 MuiListItemText-primary-574"
                >
                  <b>
                    main
                  </b>
                  : 
                   "
                  <pre
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    index.js
                  </pre>
                  "
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-618"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-613"
            />
          </li>
          <li
            className="MuiListItem-container-519"
          >
            <div
              className="MuiButtonBase-root-530 MuiListItem-root-518 MuiListItem-default-521 MuiListItem-gutters-526 MuiListItem-button-527 MuiListItem-secondaryAction-528"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-533"
              >
                <pre
                  className="Component-root-534 Component-string-535"
                >
                   String 
                </pre>
              </div>
              <span
                className="MuiButtonBase-root-530 MuiIconButton-root-556 MuiPrivateSwitchBase-root-552 MuiCheckbox-root-546 MuiCheckbox-colorSecondary-551"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-561"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-562"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiPrivateSwitchBase-input-555"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-571"
              >
                <span
                  className="MuiTypography-root-577 MuiTypography-body1-586 MuiListItemText-primary-574"
                >
                  <b>
                    module
                  </b>
                  : 
                   "
                  <pre
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    dist/es/dag.es.js
                  </pre>
                  "
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-618"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-613"
            />
          </li>
          <li
            className="MuiListItem-container-519"
          >
            <div
              className="MuiButtonBase-root-530 MuiListItem-root-518 MuiListItem-default-521 MuiListItem-gutters-526 MuiListItem-button-527 MuiListItem-secondaryAction-528"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-533"
              >
                <pre
                  className="Component-root-534 Component-array-537"
                >
                    [  ]  
                </pre>
              </div>
              <span
                className="MuiButtonBase-root-530 MuiIconButton-root-556 MuiPrivateSwitchBase-root-552 MuiCheckbox-root-546 MuiCheckbox-colorSecondary-551"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-561"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-562"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiPrivateSwitchBase-input-555"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-571"
              >
                <span
                  className="MuiTypography-root-577 MuiTypography-body1-586 MuiListItemText-primary-574"
                >
                  <b>
                    files
                  </b>
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-618"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-613"
            />
          </li>
          <li
            className="MuiListItem-container-519"
          >
            <div
              className="MuiButtonBase-root-530 MuiListItem-root-518 MuiListItem-default-521 MuiListItem-gutters-526 MuiListItem-button-527 MuiListItem-secondaryAction-528"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-533"
              >
                <pre
                  className="Component-root-534 Component-object-538"
                >
                    {  }  
                </pre>
              </div>
              <span
                className="MuiButtonBase-root-530 MuiIconButton-root-556 MuiPrivateSwitchBase-root-552 MuiCheckbox-root-546 MuiCheckbox-colorSecondary-551"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-561"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-562"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiPrivateSwitchBase-input-555"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-571"
              >
                <span
                  className="MuiTypography-root-577 MuiTypography-body1-586 MuiListItemText-primary-574"
                >
                  <b>
                    scripts
                  </b>
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-618"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-613"
            />
          </li>
          <li
            className="MuiListItem-container-519"
          >
            <div
              className="MuiButtonBase-root-530 MuiListItem-root-518 MuiListItem-default-521 MuiListItem-gutters-526 MuiListItem-button-527 MuiListItem-secondaryAction-528"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-533"
              >
                <pre
                  className="Component-root-534 Component-object-538"
                >
                    {  }  
                </pre>
              </div>
              <span
                className="MuiButtonBase-root-530 MuiIconButton-root-556 MuiPrivateSwitchBase-root-552 MuiCheckbox-root-546 MuiCheckbox-colorSecondary-551"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-561"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-562"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiPrivateSwitchBase-input-555"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-571"
              >
                <span
                  className="MuiTypography-root-577 MuiTypography-body1-586 MuiListItemText-primary-574"
                >
                  <b>
                    peerDependencies
                  </b>
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-618"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-613"
            />
          </li>
          <li
            className="MuiListItem-container-519"
          >
            <div
              className="MuiButtonBase-root-530 MuiListItem-root-518 MuiListItem-default-521 MuiListItem-gutters-526 MuiListItem-button-527 MuiListItem-secondaryAction-528"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-533"
              >
                <pre
                  className="Component-root-534 Component-object-538"
                >
                    {  }  
                </pre>
              </div>
              <span
                className="MuiButtonBase-root-530 MuiIconButton-root-556 MuiPrivateSwitchBase-root-552 MuiCheckbox-root-546 MuiCheckbox-colorSecondary-551"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-561"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-562"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiPrivateSwitchBase-input-555"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-571"
              >
                <span
                  className="MuiTypography-root-577 MuiTypography-body1-586 MuiListItemText-primary-574"
                >
                  <b>
                    devDependencies
                  </b>
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-618"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-613"
            />
          </li>
          <li
            className="MuiListItem-container-519"
          >
            <div
              className="MuiButtonBase-root-530 MuiListItem-root-518 MuiListItem-default-521 MuiListItem-gutters-526 MuiListItem-button-527 MuiListItem-secondaryAction-528"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-533"
              >
                <pre
                  className="Component-root-534 Component-object-538"
                >
                    {  }  
                </pre>
              </div>
              <span
                className="MuiButtonBase-root-530 MuiIconButton-root-556 MuiPrivateSwitchBase-root-552 MuiCheckbox-root-546 MuiCheckbox-colorSecondary-551"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-561"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-562"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiPrivateSwitchBase-input-555"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-571"
              >
                <span
                  className="MuiTypography-root-577 MuiTypography-body1-586 MuiListItemText-primary-574"
                >
                  <b>
                    dependencies
                  </b>
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-618"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-613"
            />
          </li>
          <li
            className="MuiListItem-container-519"
          >
            <div
              className="MuiButtonBase-root-530 MuiListItem-root-518 MuiListItem-default-521 MuiListItem-gutters-526 MuiListItem-button-527 MuiListItem-secondaryAction-528"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-533"
              >
                <pre
                  className="Component-root-534 Component-object-538"
                >
                    {  }  
                </pre>
              </div>
              <span
                className="MuiButtonBase-root-530 MuiIconButton-root-556 MuiPrivateSwitchBase-root-552 MuiCheckbox-root-546 MuiCheckbox-colorSecondary-551"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-561"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-562"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiPrivateSwitchBase-input-555"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-571"
              >
                <span
                  className="MuiTypography-root-577 MuiTypography-body1-586 MuiListItemText-primary-574"
                >
                  <b>
                    jest
                  </b>
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-618"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-613"
            />
          </li>
          <li
            className="MuiListItem-container-519"
          >
            <div
              className="MuiButtonBase-root-530 MuiListItem-root-518 MuiListItem-default-521 MuiListItem-gutters-526 MuiListItem-button-527 MuiListItem-secondaryAction-528"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-533"
              >
                <pre
                  className="Component-root-534 Component-object-538"
                >
                    {  }  
                </pre>
              </div>
              <span
                className="MuiButtonBase-root-530 MuiIconButton-root-556 MuiPrivateSwitchBase-root-552 MuiCheckbox-root-546 MuiCheckbox-colorSecondary-551"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-561"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-562"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiPrivateSwitchBase-input-555"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-571"
              >
                <span
                  className="MuiTypography-root-577 MuiTypography-body1-586 MuiListItemText-primary-574"
                >
                  <b>
                    publishConfig
                  </b>
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-618"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-613"
            />
          </li>
          <li
            className="MuiListItem-container-519"
          >
            <div
              className="MuiButtonBase-root-530 MuiListItem-root-518 MuiListItem-default-521 MuiListItem-gutters-526 MuiListItem-button-527 MuiListItem-secondaryAction-528"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-533"
              >
                <pre
                  className="Component-root-534 Component-string-535"
                >
                   String 
                </pre>
              </div>
              <span
                className="MuiButtonBase-root-530 MuiIconButton-root-556 MuiPrivateSwitchBase-root-552 MuiCheckbox-root-546 MuiCheckbox-colorSecondary-551"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-561"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-562"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiPrivateSwitchBase-input-555"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-571"
              >
                <span
                  className="MuiTypography-root-577 MuiTypography-body1-586 MuiListItemText-primary-574"
                >
                  <b>
                    gitHead
                  </b>
                  : 
                   "
                  <pre
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    c1aad20555302fad47d2d61d1ff0f48f6d566083
                  </pre>
                  "
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-618"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-613"
            />
          </li>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots tree basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-3 MuiGrid-spacing-xs-16-26"
    >
      <div
        className="MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-md-12-71 tree-wrapper Tree-root-1"
      >
        <div
          className="MuiList-root-100"
        >
          <li
            className="MuiListItem-container-105"
          >
            <div
              className="MuiButtonBase-root-116 MuiListItem-root-104 MuiListItem-default-107 MuiListItem-gutters-112 MuiListItem-button-113 MuiListItem-secondaryAction-114"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-119"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-120"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 2c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6H6zm7 7V3.5L18.5 9H13z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </div>
              <span
                className="MuiButtonBase-root-116 MuiIconButton-root-139 MuiPrivateSwitchBase-root-135 MuiCheckbox-root-129 MuiCheckbox-colorSecondary-134"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-144"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-145"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiPrivateSwitchBase-input-138"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-154"
              >
                <span
                  className="MuiTypography-root-160 MuiTypography-body1-169 MuiListItemText-primary-157"
                >
                  index.js
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-201"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-196"
            />
          </li>
          <li
            className="MuiListItem-container-105"
          >
            <div
              className="MuiButtonBase-root-116 MuiListItem-root-104 MuiListItem-default-107 MuiListItem-gutters-112 MuiListItem-button-113 MuiListItem-secondaryAction-114"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-119"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-120"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </div>
              <span
                className="MuiButtonBase-root-116 MuiIconButton-root-139 MuiPrivateSwitchBase-root-135 MuiCheckbox-root-129 MuiCheckbox-colorSecondary-134"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-144"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-145"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiPrivateSwitchBase-input-138"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-154"
              >
                <span
                  className="MuiTypography-root-160 MuiTypography-body1-169 MuiListItemText-primary-157"
                >
                  assets
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-201"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-196"
            />
          </li>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots tree customized 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-210 MuiGrid-spacing-xs-16-233"
    >
      <div
        className="MuiGrid-item-211 MuiGrid-grid-xs-12-250 MuiGrid-grid-md-12-278 tree-wrapper Tree-root-208"
      >
        <div
          className="MuiList-root-307"
        >
          <li
            className="MuiListItem-container-312"
          >
            <div
              className="MuiButtonBase-root-323 MuiListItem-root-311 MuiListItem-default-314 MuiListItem-gutters-319 MuiListItem-button-320 MuiListItem-secondaryAction-321"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-326"
              >
                <svg
                  aria-labelledby="apksi-logos-javascript-title"
                  height="1.5em"
                  id="si-logos-javascript"
                  preserveAspectRatio="xMidYMid"
                  style={
                    Object {
                      "marginRight": 0,
                    }
                  }
                  viewBox="0 0 256 256"
                  width="1.5em"
                >
                  <title
                    id="apksi-logos-javascript-title"
                  >
                    logo of javascript
                  </title>
                  <path
                    d="M0 0h256v256H0V0z"
                    fill="#F7DF1E"
                  />
                  <path
                    d="M67.312 213.932l19.59-11.856c3.78 6.701 7.218 12.371 15.465 12.371 7.905 0 12.89-3.092 12.89-15.12v-81.798h24.057v82.138c0 24.917-14.606 36.259-35.916 36.259-19.245 0-30.416-9.967-36.087-21.996M152.381 211.354l19.588-11.341c5.157 8.421 11.859 14.607 23.715 14.607 9.969 0 16.325-4.984 16.325-11.858 0-8.248-6.53-11.17-17.528-15.98l-6.013-2.58c-17.357-7.387-28.87-16.667-28.87-36.257 0-18.044 13.747-31.792 35.228-31.792 15.294 0 26.292 5.328 34.196 19.247L210.29 147.43c-4.125-7.389-8.591-10.31-15.465-10.31-7.046 0-11.514 4.468-11.514 10.31 0 7.217 4.468 10.14 14.778 14.608l6.014 2.577c20.45 8.765 31.963 17.7 31.963 37.804 0 21.654-17.012 33.51-39.867 33.51-22.339 0-36.774-10.654-43.819-24.574"
                  />
                </svg>
              </div>
              <span
                className="MuiButtonBase-root-323 MuiIconButton-root-337 MuiPrivateSwitchBase-root-333 MuiCheckbox-root-327 MuiCheckbox-colorSecondary-332"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-342"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-343"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiPrivateSwitchBase-input-336"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-352"
              >
                <span
                  className="MuiTypography-root-358 MuiTypography-body1-367 MuiListItemText-primary-355"
                >
                  index.js
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-408"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-394"
            />
          </li>
          <li
            className="MuiListItem-container-312"
          >
            <div
              className="MuiButtonBase-root-323 MuiListItem-root-311 MuiListItem-default-314 MuiListItem-gutters-319 MuiListItem-button-320 MuiListItem-secondaryAction-321"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-326"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-395"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </div>
              <span
                className="MuiButtonBase-root-323 MuiIconButton-root-337 MuiPrivateSwitchBase-root-333 MuiCheckbox-root-327 MuiCheckbox-colorSecondary-332"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-342"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-343"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiPrivateSwitchBase-input-336"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-352"
              >
                <span
                  className="MuiTypography-root-358 MuiTypography-body1-367 MuiListItemText-primary-355"
                >
                  assets
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-408"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-394"
            />
          </li>
        </div>
      </div>
    </div>
  </div>
</div>
`;
